[tool.poetry]
name = "spotify-explore-cli"
version = "0.1.0"
description = ""
authors = ["Dmytro Kostochko <alerion.um@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
spotipy = "^2.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
